# ua-detect

./: Cargo.toml  README.md  flake.nix
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/server/: Cargo.toml  build.rs
crates/server/proto/: validate.proto
crates/server/src/: main.rs  regexes.yaml
crates/validate/: Cargo.toml
crates/validate/src/: lib.rs
