[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
name = "ua-detect"
version = "0.0.0"
authors = ["Blaine Bublitz <blaine.bublitz@gmail.com>"]
edition = "2021"
rust-version = "1.71.1"

[workspace.dependencies]
ua-detect-server = { path = "crates/server" }
ua-detect-validate = { path = "crates/validate" }
clap = "4.4.0"
fakeit = "1.1.2"
prost = "0.11"
thiserror = "1.0.47"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9"
tonic-build = "0.9"
uaparser = "0.6.1"

[patch.crates-io]
