[package]
name = "ua-detect-server"
description = "Server application that provides the gRPC endpoint for ua-detect"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
prost.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
uaparser.workspace = true
ua-detect-validate.workspace = true

[dev-dependencies]
fakeit.workspace = true

